Changed: Xadrez Livre general title;

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <language name="pt_BR">
 	<general>
-		<general_title>Cliente Web ChessD</general_title>
+		<general_title>Xadrez Livre - O melhor lugar para jogar Xadrez na Internet</general_title>
 		<general_name>ChessD</general_name>
 	</general>
 	<utils>
