Modified: Set not_implemented_title text according to specification

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -5,7 +5,7 @@
 		<general_name>ChessD</general_name>
 	</general>
 	<utils>
-		<not_implemented_title>Não implementado</not_implemented_title>
+		<not_implemented_title>Não implementada</not_implemented_title>
 		<not_implemented>Funcionalidade ainda não implementada para esta versão.</not_implemented>
 	</utils>
 	<window>
