--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -216,13 +216,17 @@
 		<game_result_black-timeover>O tempo das pretas acabou</game_result_black-timeover>
 		<game_result_white-mated>As brancas ganharam por xeque-mate</game_result_white-mated>
 		<game_result_black-mated>As pretas ganharam por xeque-mate</game_result_black-mated>
-		<game_result_white-resigned>As brancas desistiram do jogo</game_result_white-resigned>
-		<game_result_black-resigned>As pretas desistiram do jogo</game_result_black-resigned>
+		<game_result_white-resigned>As brancas desistiram da partida</game_result_white-resigned>
+		<game_result_black-resigned>As pretas desistiram da partida</game_result_black-resigned>
 		<game_result_draw-agreement>Os jogadores concordaram em um empate</game_result_draw-agreement>
 		<game_result_draw-repetition>Empate por repetição de posição</game_result_draw-repetition>
 		<game_result_draw-fifty-moves>Empate pela regra dos 50 lances</game_result_draw-fifty-moves>
 		<game_result_draw-impossible-mate>Empate por insuficiência de material</game_result_draw-impossible-mate>
 		<game_result_draw-timeover>O tempo dos dois jogadores acabaram</game_result_draw-timeover>
+		<game_result_canceled-agreement>Os jogadores concordaram em cancelar a partida</game_result_canceled-agreement>
+		<game_result_canceled-timed-out>A partida foi cancelada por inatividade</game_result_canceled-timed-out>
+		<game_result_adjourned-agreement>Os jogadores concordaram em adiar a partida</game_result_adjourned-agreement>
+		<game_result_adjourned-shutdown>A partida foi adiada porque o servidor está sendo desligado</game_result_adjourned-shutdown>
 	</game>
 	<profile>
 		<profile_window>Perfil e Informações</profile_window>
@@ -296,6 +300,8 @@
 		<oldgame_no_result>Nenhum resultado encontrado.</oldgame_no_result>
 		<oldgame_player1_hd>Jogador 1</oldgame_player1_hd>
 		<oldgame_player2_hd>Jogador 2</oldgame_player2_hd>
+		<oldgame_white_hd>Brancas</oldgame_white_hd>
+		<oldgame_black_hd>Pretas</oldgame_black_hd>
 		<oldgame_category>Categoria</oldgame_category>
 		<oldgame_result>Resultado</oldgame_result>
 		<oldgame_date>Data</oldgame_date>
