Added: Change hide word when click to show user list in room; Added: Show and hide user list strings in pt_BR.xml; Changed: Load show/hide user from language XML; Added: zIndex to room user list to open over any center content (IE need fix);

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -100,6 +100,8 @@
 		<room_error>Erro na criação de sala</room_error>
 		<room_invalid_name>Nome inválido para sala.</room_invalid_name>
 		<room_invalid_length>Tamanho máximo de 30 caracteres.</room_invalid_length>
+		<room_show_user_list>Ver usuários da sala</room_show_user_list>
+		<room_hide_user_list>Ocultar usuários da sala</room_hide_user_list>
 	</room>
 	<group>
 		<group_default>Amigos</group_default>
