Changed: Announce button in announce window text (get from xml language)

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -167,6 +167,7 @@
 		<challenge_offer_user_offline>Você está desconectado do servidor de xadrez. Connecte novamente na página para ficar online.</challenge_offer_user_offline>
 		<challenge_offer_opponent_offline>Oponente está jogando ou está desconectado do servidor de xadrez.</challenge_offer_opponent_offline>
 		<challenge_error>Erro ao desafiar</challenge_error>
+		<challenge_announce_match>Anunciar</challenge_announce_match>
 	</challenge>
 	<game>
 		<game_draw>Requisição de empate</game_draw>
