--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -42,6 +42,7 @@
 		<login_load_images>Carregando imagens...</login_load_images>
 		<login_load_user_list>Carregando lista de usuários...</login_load_user_list>
 		<login_validate_user>Usuário inválido</login_validate_user>
+		<login_connection_closed>Conexão perdida. Tente novamente.</login_connection_closed>
 	</login>
 	<menu>
 		<menu_adjourn>Adjudicar</menu_adjourn>
