Modified: Remove contact window text Modified: User menu - add user text

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -127,7 +127,7 @@
 		<usermenu_send_message>Conversar</usermenu_send_message>
 		<usermenu_send_offlinemessage>Deixar recado</usermenu_send_offlinemessage>
 		<usermenu_match>Convidar para jogar</usermenu_match>
-		<usermenu_add_contact>Adicionar contato</usermenu_add_contact>
+		<usermenu_add_contact>Adicionar aos contatos</usermenu_add_contact>
 		<usermenu_remove_contact>Remover contato</usermenu_remove_contact>
 		<usermenu_view_profile>Ver perfil e informações</usermenu_view_profile>
 		<usermenu_disconnect_user>Desconectar usuário</usermenu_disconnect_user>
