--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -48,6 +48,7 @@
 		<login_connection_start>Abrindo Conexão...</login_connection_start>
 		<login_connection_user>Verificando usuário...</login_connection_user>
 		<login_connection_passwd>Verificando senha...</login_connection_passwd>
+		<login_server_not_founded>Servidor não encontrado.</login_server_not_founded>
 	</login>
 	<menu>
 		<menu_adjourn>Adjudicar</menu_adjourn>
